@@ -1,8 +1,14 @@
+2011-02-28  Tim Marston <edam@waxworlds.org>
+
+	* gtypist.c: rewrote the code to open a script file and check for the
+	  presence of HOME environment variable (required for the bestlog) so
+	  that it should work on Windows platforms when HOME is not present.
+
 2011-02-26  Tim Marston <edam@waxworlds.org>
 
 	* gtypist.c: added best-score tracking feature and re-wrote some of the
-	  speed calculation/display code to always work with CPM (which are saved
-	  in the bestlog) and convert to WPM only at display-time.
+	  speed calculation/display code to always work with CPM (which are
+	  saved in the bestlog) and convert to WPM only at display-time.
 
 2011-01-03	Tim Marston <edam@waxworlds.org>
 
